[tool.poetry]
name = "codaio-exporter"
version = "0.1.2"
description = ""
authors = ["Sebastian Messmer <mail@smessmer.de>"]

[tool.poetry.dependencies]
python = "^3.10"
ensure = "^1.0.2"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.961"

[tool.poetry.scripts]
codaio-exporter = "codaio_exporter.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
