[tool.poetry]
name = "codaio-exporter"
version = "0.3.4"
description = ""
authors = ["Sebastian Messmer <mail@smessmer.de>"]

[tool.poetry.dependencies]
python = "^3.10"
ensure = "^1.0.3"
aiohttp = "^3.8.5"
dataclasses-json = "^0.6.0"
rich = "^13.5.2"
aiofiles = "^23.2.1"
types-aiofiles = "^23.2.0.0"
types-PyYAML = "^6.0.12.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"

[tool.poetry.scripts]
codaio-exporter = "codaio_exporter.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
